apps/cowsay-fortune/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cowsay-fortune
  namespace: cowsay-fortune
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cowsay-fortune
  template:
    metadata:
      labels:
        app: cowsay-fortune
      annotations:
        configmap/update: "1"
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: config
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: hostname-script
          mountPath: /docker-entrypoint.d/99-hostname.sh
          subPath: hostname.sh
      volumes:
      - name: config
        configMap:
          name: cowsay-fortune
      - name: hostname-script
        configMap:
          name: cowsay-fortune-hostname
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: cowsay-fortune
  namespace: cowsay-fortune
spec:
  selector:
    app: cowsay-fortune
  ports:
  - port: 80
    targetPort: 80
